--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	implementation 'javax.mail:mail:1.4.7'
 	implementation 'org.springframework:spring-context-support:5.2.0.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
 
 	compileOnly 'io.springfox:springfox-boot-starter:3.0.0'
 
