--- a/build.gradle
+++ b/build.gradle
@@ -36,17 +36,21 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	//security + jwt
+	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	//oauth2
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: '2.7.2'
 
+	//jwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
+	//json
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 	implementation group: 'org.json', name: 'json', version: '20210307'
 
