--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'javax.mail:mail:1.4.7'
 	implementation 'org.springframework:spring-context-support:5.2.0.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.281'
 
 	compileOnly 'io.springfox:springfox-boot-starter:3.0.0'
 
